use trendline context for trendlines, tdf#94931, tdf#94934

Change-Id: I0cb9cdec33924e560b24744cc78d632025a189fc